# DeviceAI

./: export_python.py  settings.gradle.kts  test_bias.py  test_image.py  test_ptl.py
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/wying/classifydemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: imagenet_classes.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/wying/classifydemo/: App.kt  CameraActivity.kt  FileCopyUtils.kt  MainActivity.kt  NativePredictor.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/wying/classifydemo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
